# Cpp-Labs

./: .gitignore  Dockerfile  Jenkinsfile  desktop.ini
120/02.if-statements/: If Statement Lab - Club Admission Lab (Yelsin S.).cpp  If Statement Lab - Club Admission Lab (Yelsin S.).sln
120/03.switch-case/: Switch Case Lab - Online Music Store Charge(Yelsin S.).sln
120/04.input-validation/: Input Validatio Lab (Yelsin S.) - Copy.txt  Input Validation Lab by Yelsin S.sln
120/05.1.online-music-store-group/: Online Music Store (Team Purple).sln  Online Music Store (Team Purple).txt
120/05.2.online-music-store-individual/: Online Music Store __ Practice quiz (Yelsin S).cpp
120/08.file-open-validation/: FileOpenValidationAndAverage(Yelsin S.).txt
120/09.sum-or-pruduct-sign-diffrence/: Sum or Product - Sign diffrence(Yelsin S.).cpp
120/13.rearrange/: Rearrange Lab (Yelsin S.).txt
284/Group_Project/BankAccounts/: CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  GenericAccount.cpp  GenericAccount.h  InactiveAccount.cpp  README.md  SavingsAccount.cpp  SavingsAccount.h  TestHelper.cpp  TestHelper.h  checking-account-deposit-fees.cpp  checking-account-deposit-fees.test.cpp  main.cpp  premake5.lua  saving-account-withdrawal-fees.test.cpp
284/Group_Project/BankAccounts/scripts/: linux-build.sh  linux-run.sh
284/Group_Project/BankAccounts/scripts/test/deposit-fees/: deposit-fees-build.test.sh  deposit-fees-run.test.sh
284/Group_Project/BankAccounts/scripts/test/saving-withdrawal-fees/: saving-withdrawal-fees-build.test.sh  saving-withdrawal-fees-run.test.sh
(+194 files in other folders)
